--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 
     <div class="desc">
       <h2 class="tags"></h2>
-      <h5 class="location"><span></span> / <small></small></h5>
+      <h5 class="location"><span></span> / <small></small></h5> 
     </div>
 
+    <div class="colophon">
+      <p>refresh the page / <a href="https://github.com/Periscopera/periscopera.github.io" target="_blank">more info</a></p>
+    </div>
+
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script src="https://spreadsheets.google.com/feeds/list/1e0N4HlljoN53muAk02r3wpxiBUNc7LuZA7Md1ByQpjc/od6/public/values?alt=json-in-script&callback=sheetLoaded"></script>
   </body>
