mousemove event added

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <h5 class="location"><span></span> / <small></small></h5> 
     </div>
 
-    <!--<div class="colophon">
+    <div class="colophon">
       <p>refresh the page / <a href="https://github.com/Periscopera/periscopera.github.io" target="_blank">more info</a></p>
-    </div>-->
+    </div>
 
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
