info page added and general style updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="colophon title">
-      <h2 class="tags">Survelliance.life <br><small><a href="https://github.com/Periscopera/periscopera.github.io">more info</a></small></h2>
+      <h2 class="tags">Survelliance.life <br><small><a href="/info.html">more info</a></small></h2>
     </div>
     <div class="colophon next">
       <a id="next" href="#">&#128064;</a>
