--- a/info.html
+++ b/info.html
@@ -18,11 +18,13 @@
       <p>Surveillance.life is an live experiment in electronic vision. It turns your device into the lens of 100 surveillance cameras around the world: Change scenes by clicking anywhere on the page (or shaking your phone) to move to a new real-time camera in a randomly selected location.</p>
       <p>The cameras are curated and changed regularly. They are not ours, but they are publicly-accessible on the internet. While some serve obvious functions—monitoring work sites or doggie daycares—we don’t really know who installed them or why.</p>
       <p>A white page means that the camera view has been closed.</p>
+      <hr>
       <p><a href="http://twitter.com/pinakes" target="_blank">Francesco Fraioli</a><br>
       <a href="http://twitter.com/husca" target="_blank">Caitlin Hu<br>
       <a href="http://twitter.com/sono_la_gii" target="_blank">Giorgia Marenda<br>
       <a href="http://twitter.com/johnnyaboh" target="_blank">Giovanni Cappellotto<br>
       </p>
+      <p><small><a href="https://github.com/Surveillancelife/surveillancelife.github.io/">github</a></small></p>
     </div>
 
     <div class="colophon nextInfo">
