typo solved on info title. was night mistake

--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
   </head>
   <body class="info">
     <div class="description">
-      <h2 class="title">Surveillance.info</h2>
+      <h2 class="title">Surveillance.life</h2>
       <div class="staticVideos">
         <div class="tiny day"></div>
         <div class="tiny night"></div>
