--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Surveillance.life</title>
     <meta charset="utf-8" />
+    <meta name="google-site-verification" content="gZfa5gpsWzM5Bk_AJwCdbZjqoHYPxRvyoysR_os_DH4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
