--- a/index.html
+++ b/index.html
@@ -30,5 +30,16 @@
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script src="https://spreadsheets.google.com/feeds/list/1e0N4HlljoN53muAk02r3wpxiBUNc7LuZA7Md1ByQpjc/od6/public/values?alt=json-in-script&callback=sheetLoaded"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-74378989-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
