--- a/info.html
+++ b/info.html
@@ -15,7 +15,7 @@
         <div class="tiny day"></div>
         <div class="tiny night"></div>
       </div>
-      <p>Surveillance.life is an live experiment in electronic vision. It turns your device into the lens of 100 surveillance cameras around the world: Change scenes by clicking anywhere on the page (or shaking your phone) to move to a new real-time camera in a randomly selected location.</p>
+      <p>Surveillance.life is a live experiment in electronic vision. It turns your device into the lens of 100 surveillance cameras around the world: Change scenes by clicking anywhere on the page (or shaking your phone) to move to a new real-time camera in a randomly selected location.</p>
       <p>The cameras are curated and changed regularly. They are not ours, but they are publicly-accessible on the internet. While some serve obvious functions—monitoring work sites or doggie daycares—we don’t really know who installed them or why.</p>
       <p>A white page means that the camera view has been closed.</p>
       <hr>
