--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="colophon title">
-      <h2 class="tags">Survelliance.life <br><small><a href="/info.html">more info</a></small></h2>
+      <h2 class="tags">Surveillance.life <br><small><a href="/info.html">more info</a></small></h2>
     </div>
     <div class="colophon next">
       <a id="next" href="#">&#128064;</a>
