--- a/info.html
+++ b/info.html
@@ -19,11 +19,13 @@
       <p>The cameras are curated and changed regularly. They are not ours, but they are publicly-accessible on the internet. While some serve obvious functions—monitoring work sites or doggie daycares—we don’t really know who installed them or why.</p>
       <p>A white page means that the camera view has been closed.</p>
       <hr>
-      <p><a href="http://twitter.com/pinakes" target="_blank">Francesco Fraioli</a><br>
-      <a href="http://twitter.com/husca" target="_blank">Caitlin Hu<br>
-      <a href="http://twitter.com/sono_la_gii" target="_blank">Giorgia Marenda<br>
-      <a href="http://twitter.com/johnnyaboh" target="_blank">Giovanni Cappellotto<br>
+      <p>by<br>
+      <a href="http://twitter.com/pinakes" target="_blank">Francesco Fraioli</a><br>
+      <a href="http://twitter.com/husca" target="_blank">Caitlin Hu</a><br>
       </p>
+      <p>thanks to<br>
+      <a href="http://twitter.com/sono_la_gii" target="_blank">Giorgia Marenda</a><br>
+      <a href="http://twitter.com/johnnyaboh" target="_blank">Giovanni Cappellotto</a><br> 
       <p><small><a href="https://github.com/Surveillancelife/surveillancelife.github.io/">github</a></small></p>
     </div>
 
